unpackaged/main/default/objects/AccuralPeriods__mdt/AccuralPeriods__mdt.object-meta.xml
<CustomObject>
    <label>Accural Periods</label>
    <pluralLabel>Accural Periods</pluralLabel>
</CustomObject>