unpackaged/main/default/objects/AccuralPeriods__mdt/fields/AccuralPeriod__c.field-meta.xml
<CustomField>
    <fullName>AccuralPeriod__c</fullName>
    <description>Name of accrual period. ex: &quot;20190204-20200202&quot;</description>
    <label>Accural Period</label>
    <length>17</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>