unpackaged/main/default/objects/AccuralPeriods__mdt/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>day before the start date of next year.</description>
    <label>EndDate</label>
    <required>true</required>
    <type>Date</type>
</CustomField>