unpackaged/main/default/objects/AccuralPeriods__mdt/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>Start date of accrual period. 4th monday of the year.</description>
    <label>StartDate</label>
    <required>true</required>
    <type>Date</type>
</CustomField>